# Analisis-de-Textos

./: Analisis_de_Texto_v1_0.ipynb  Analisis_de_texto_txt,_epub,_pdf_v1_1.ipynb  DESCRIPTION.md  __init__.py  df-create.ipynb  functions.py  pyproject.toml  setup.py
